--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.0.0", features = ["full", "tracing"] }
+tokio-util = { version = "0.7.0", features = ["full"] }
+openssl = { version = "0.10.36", features = ["vendored"] }
