--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+openssl = { version = "0.10.36", features = ["vendored"] }
+tokio = { version = "1.0.0", features = ["full", "tracing"] }
